Initialized redesign in feed page

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="img/logo_official.svg" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="keywords" content="pinoy, neybi, naybiblu, squared, square, mharc nyvhie guillermo
+			quadrilaterals, bnkk" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
