--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,22 @@
 		<meta name="keywords" content="pinoy, neybi, naybiblu, squared, square, mharc nyvhie guillermo
 			quadrilaterals, bnkk" />
 		%sveltekit.head%
+		<style>
+		  @font-face {
+        font-family: Varella;
+        src: url("ttf/Varella.ttf");
+      }
+
+      @font-face {
+        font-family: ABC-Regular;
+        src: url("ttf/ABCRegular.ttf");
+      }
+
+      @font-face {
+        font-family: ABC-Italic;
+        src: url("ttf/ABCItalic.ttf");
+      }
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
