--- a/src/app.html
+++ b/src/app.html
@@ -22,6 +22,10 @@
         font-family: ABC-Italic;
         src: url("ttf/ABCItalic.ttf");
       }
+      
+      .bg-default {
+        background: url("img/bg.svg")
+      }
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
